bug: icons alignment - fixed bug: rust price string (should be number) - fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,228 +1,223 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap");
 /* importing google fonts */
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
 }
 
 header {
-  background-image: url('./images/cover.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  height: 150px;
-  position: relative;
+    background-image: url("./images/cover.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 150px;
+    position: relative;
 }
 
 .overlay {
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  height: 100%;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(10,10,10,0.3);
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    height: 100%;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(10, 10, 10, 0.3);
 }
-
 
 nav {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 2;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 50px 60px 0 60px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 2;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 50px 60px 0 60px;
 }
 
-
 nav li {
-  list-style: none;
-  display: inline-block;
-  padding-right: 10px;
-  padding-left: 10px;
+    list-style: none;
+    display: inline-block;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 li a {
-  padding: 5px;
-  background-color: #fff;
-  text-decoration: none;;
+    padding: 5px;
+    background-color: #fff;
+    text-decoration: none;
 }
 
 .cart ion-icon {
-  vertical-align: bottom;
-  font-size: 20px;
-  padding-right: 5px;
- }
+    vertical-align: bottom;
+    font-size: 20px;
+    padding-right: 5px;
+}
 
 .cart a {
-  background-color: royalblue;
-  color: #fff;
-  cursor: pointer;
-  text-decoration: none;
+    background-color: royalblue;
+    color: #fff;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 .container,
 .container-products {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin-top: 50px;
-  padding-bottom: 100px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 50px;
+    padding-bottom: 100px;
 }
 
 .image {
-  margin-right: 20px;
-  margin-left: 20px;
-  margin-bottom: 30px;
-  position: relative;
-  overflow: hidden;
-  width: 150px;
-  height: 250px;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-bottom: 30px;
+    position: relative;
+    overflow: hidden;
+    width: 150px;
+    height: 250px;
 }
 
 img {
-  width: 100%;
-  height: 80%;
+    width: 100%;
+    height: 80%;
 }
 
 .addToCart {
-  position: absolute;
-  width: 100%;
-  background-color: darkgrey;
-  transition: all 0.5s ease-in-out;
-  opacity: 0;
-  color: green;
-  cursor: pointer;
-  text-align: center;
+    position: absolute;
+    width: 100%;
+    background-color: darkgrey;
+    transition: all 0.5s ease-in-out;
+    opacity: 0;
+    color: green;
+    cursor: pointer;
+    text-align: center;
 }
 
 .image:hover .cart1,
 .image:hover .cart2,
 .image:hover .cart3,
 .image:hover .cart4,
-.image:hover .cart5
-{
-  bottom: 40px;
-  opacity: 1;
-  padding: 10px;
-  text-decoration: none;
+.image:hover .cart5 {
+    bottom: 40px;
+    opacity: 1;
+    padding: 10px;
+    text-decoration: none;
 }
 
 /* ----------------- CART PAGE --------------- */
 
 .container-products {
-  max-width: 650px;
-  justify-content: space-around;
-  margin: 0 auto;
-  margin-top: 50px;
+    max-width: 650px;
+    justify-content: space-around;
+    margin: 0 auto;
+    margin-top: 50px;
 }
 
 .container-products ion-icon {
-  font-size: 25px;
-  color: blue;
-  margin-left: 10px;
-  margin-right: 10px;
-  cursor: pointer;
+    font-size: 25px;
+    color: blue;
+    margin-left: 10px;
+    margin-right: 10px;
+    cursor: pointer;
 }
 
 .product-header {
-  width: 100%;
-  max-width: 650px;
-  display: flex;
-  justify-content: flex-start;
-  border-bottom: 4px solid lightgray;
-  margin: 0 auto;
+    width: 100%;
+    max-width: 650px;
+    display: flex;
+    justify-content: flex-start;
+    border-bottom: 4px solid lightgray;
+    margin: 0 auto;
 }
 
 .product-title {
-  width: 45%;
+    width: 45%;
 }
 
 .price {
-  width: 15%;
-  border-bottom: 1px solid lightgray;
-  display: flex;
-  align-items: center;
+    width: 15%;
+    border-bottom: 1px solid lightgray;
+    display: flex;
+    align-items: center;
 }
 
 .quantity {
-  width: 30%;
-  border-bottom: 1px solid lightgray;
-  display: flex;
-  align-items: center;
+    width: 30%;
+    border-bottom: 1px solid lightgray;
+    display: flex;
+    align-items: center;
 }
 
 .total {
-  width: 10%;
-  border-bottom: 1px solid lightgray;
-  display: flex;
-  align-items: center;
+    width: 10%;
+    border-bottom: 1px solid lightgray;
+    display: flex;
+    align-items: center;
 }
 
 .product {
-  width: 45%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 10px 0;
-  border-bottom: 1px solid lightgray;
+    width: 45%;
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr;
+    align-items: center;
+    padding: 10px 0;
+    border-bottom: 1px solid lightgray;
 }
 
 .product ion-icon {
-  cursor: pointer;
-  
+    cursor: pointer;
 }
 
 .products {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .products img {
-  width: 75px;
+    width: 75px;
 }
 
 .basketTotalContainer {
-  display: flex;
-  justify-content: flex-end;
-  width: 100%;
-  padding: 10px 0;
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    padding: 10px 0;
 }
 
 .basketTotalTitle {
-  width: 30%;
+    width: 30%;
 }
 
 .basketTotal {
-  width: 10%;
+    width: 10%;
 }
 
-@media(max-width: 500px) {
-  nav h2 {
-      width: 100%;
-      text-align: center;
-      margin-bottom: 10px;;
-  }
+@media (max-width: 500px) {
+    nav h2 {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 10px;
+    }
 
-  .sm-hide {
-      display: none;;
-  }
+    .sm-hide {
+        display: none;
+    }
 
-  .products,
-  .product-header {
-      justify-content: center;
-  }
+    .products,
+    .product-header {
+        justify-content: center;
+    }
 
-  .basketTotalContainer {
-      padding-right: 8%;
-  }
+    .basketTotalContainer {
+        padding-right: 8%;
+    }
 }
-
